k8s/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
     labels:
       app: consumer
    spec:
      containers:
        - image: consumer:lab3
          imagePullPolicy: Never
          name: consumer
