k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
     labels:
       app: api
    spec:
      containers:
        - image: api:lab1
          imagePullPolicy: Never
          name: api
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: api
