k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
     labels:
       app: client
    spec:
      containers:
        - image: client:lab1
          imagePullPolicy: Never
          name: client
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: client
